[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Player/Walking Animation/Walk Up4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Down4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Left2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Left1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Right3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Right4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Up2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Up3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Right1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Down1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Left3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Right2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Up1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Left4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Down3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Walking Animation/Walk Down2.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=17]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Down3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Left3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Left2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Rightt2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Down2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Rightt3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Up3.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/Attack Animation/Attack Up2.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 18 ), ExtResource( 22 ) ],
"loop": true,
"name": "attack_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "attack_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "attack_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0
height = 44.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 0.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 17 )
base_health = 7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 1 )
animation = "walk_down"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 1, 0.5 )
polygon = PoolVector2Array( 8, 2, 8, -3, 4, -8, -4, -8, -8, -3, -8, 2, -4, 8, 4, 8 )

[node name="AttackHitBox" type="Area2D" parent="." groups=["PlayerHitBox"]]

[node name="StandardAttackUp" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2( 0, -43 )
shape = SubResource( 3 )
disabled = true

[node name="StandardAttackDown" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )
disabled = true

[node name="StandardAttackLeft" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2( -37, -14 )
rotation = -1.5708
shape = SubResource( 3 )
disabled = true

[node name="StandardAttackRight" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2( 37, -14 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="HurtBox" type="Area2D" parent="." groups=["PlayerHurtBox"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -13 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 4 )

[node name="DetectionBox" type="Area2D" parent="." groups=["PlayerDetectionBox"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionBox"]
position = Vector2( 0, -3 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
